--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
       <version>2.26.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.25.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
 
