--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,32 @@
     </dependency>
 
   </dependencies>
+
+  <build>
+    <plugins>
+      <!-- Plugin 1 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <!-- Compiler configuration -->
+        </configuration>
+      </plugin>
+
+      <!-- Plugin 2 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <!-- Surefire plugin configuration -->
+        </configuration>
+      </plugin>
+
+      <!-- Add more plugins as needed -->
+    </plugins>
+  </build>
 </project>
 
 
