--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
       <version>5.7.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
+
+
 
   </dependencies>
 
