--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -1,5 +1,5 @@
 url=https://app.vwo.com
 username=piyusha.bansod@gmail.com
-password=February@2023
+password=February@2023#
 expected_username=Piyush Bansod
 error_message=Your email, password, IP address or location did not match
